fix: make missionTable visible to delegator/consumer (#118)

--- a/src/pages/missions/Mission/Home.module.css
+++ b/src/pages/missions/Mission/Home.module.css
@@ -75,6 +75,4 @@
 
 .nonData {
   margin: 1rem 0;
-  background: white;
-  padding: 1rem;
 }
